--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,73 @@
 .hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // margin-left: auto;
+  // margin-right: auto;
+  height: 400px;
+
   background-color: var(--dark-bgc);
   color: var(--white-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/head/head.jpg);
+    url("../../images/hero/hero-bg-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
+
+  & .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // text-align: center;
+  }
 }
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
+  (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
+  (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero/hero-bg-mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero/hero-bg-tablet.jpg");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px),
+  (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px),
+  (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero/hero-bg-tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero/hero-bg-desktop.jpg");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px) and (max-width: 1600px),
+  (min-resolution: 192dpi) and (min-width: 1200px) and (max-width: 1600px),
+  (min-resolution: 2dppx) and (min-width: 1200px) and (max-width: 1600px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero/hero-bg-desktop@2x.jpg");
+  }
+}
+
+// .hero {
+//   background-color: var(--dark-bgc);
+//   color: var(--white-color);
+//   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+//     url(../images/head/head.jpg);
+//   background-repeat: no-repeat;
+//   background-position: center;
+// }
