--- a/sass/layout/_strengths.scss
+++ b/sass/layout/_strengths.scss
@@ -1,19 +1,23 @@
 .strengths-header {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-
 .strengths-list {
   display: flex;
-  justify-content: space-between;
+  // flex-direction: column;
+  flex-wrap: wrap;
+  // align-items: center;
+  // justify-content: center;
 
-  &__item {
-    max-width: 270px;
-    align-items: center;
-  }
+  // &__item {
+  //   // max-width: 270px;
+  //   // align-items: center;
+  //   // text-align: center;
+  // }
 
   &__text {
     margin-top: 10px;
@@ -33,3 +37,59 @@
     border-radius: 4px;
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .strengths-list__item {
+    flex-basis: calc((100% - 30px * 2) / 2);
+    // flex-basis: calc(100% / 2 - 30px);
+    margin: 15px;
+    // not
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .strengths-list {
+    display: flex;
+    justify-content: space-between;
+
+    &__item {
+      max-width: 270px;
+      align-items: center;
+    }
+  }
+}
+// .strengths-header {
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: 1.143;
+//   letter-spacing: 0.03em;
+//   text-transform: uppercase;
+// }
+
+// .strengths-list {
+//   display: flex;
+//   justify-content: space-between;
+
+//   &__item {
+//     max-width: 270px;
+//     align-items: center;
+//   }
+
+//   &__text {
+//     margin-top: 10px;
+//     font-size: 14px;
+//     line-height: 1.714;
+//     letter-spacing: 0.03em;
+//     color: var(--grey-color);
+//   }
+
+//   &__icon-bg {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     margin-bottom: 30px;
+//     height: 120px;
+//     background: var(--grey-bgc);
+//     border-radius: 4px;
+//   }
+// }
