--- a/css/main.css
+++ b/css/main.css
@@ -59,48 +59,77 @@ img {
 }
 
 .container {
-  width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
   align-items: center;
 }
 
-.header .container {
-  display: flex;
-  padding-top: 24px;
-  padding-bottom: 25px;
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+/*.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
   align-items: center;
-}
 
-.hero .container {
-  display: flex;
-  flex-direction: column;
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
+  .header & {
+    display: flex;
+    padding-top: 24px;
+    padding-bottom: 25px;
+    align-items: center;
+  }
 
-.strengths-list .container {
-  display: flex;
-  justify-content: space-between;
-}
+  .hero & {
+    display: flex;
+    flex-direction: column;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 
-.team .container {
-  display: flex;
-  flex-direction: column;
-}
+  .strengths-list & {
+    display: flex;
+    justify-content: space-between;
+  }
 
-.footer .container {
-  display: flex;
-  align-items: baseline;
-}
+  .team & {
+    display: flex;
+    flex-direction: column;
+  }
 
-.porfolio-filters .container {
-  display: flex;
-  justify-content: center;
-}
+  .footer & {
+    display: flex;
+    align-items: baseline;
+  }
 
+  .porfolio-filters & {
+    display: flex;
+    justify-content: center;
+  }
+}*/
 .section {
-  padding-top: 94px;
+  padding-top: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+  }
 }
 
 .section:not(.our-strengths) {
@@ -131,35 +160,21 @@ img {
 
 .main-header {
   padding-bottom: 30px;
-  max-width: 696px;
+  max-width: 365px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.364;
+  font-size: 26px;
+  line-height: 1.615;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
-.secondary-header {
-  padding-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.667;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-
-.third-header {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-.footer-header {
-  margin-bottom: 20px;
-  color: var(--white-color);
+@media screen and (min-width: 1200px) {
+  .main-header {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.364;
+  }
 }
 
 .social-list {
@@ -504,14 +519,56 @@ img {
 }
 
 .hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
   background-color: var(--dark-bgc);
   color: var(--white-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/head/head.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-bg-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
+}
+
+.hero .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px), (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px), (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-bg-mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-bg-tablet.jpg");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px), (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px), (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-bg-tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-bg-desktop.jpg");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px) and (max-width: 1600px), (min-resolution: 192dpi) and (min-width: 1200px) and (max-width: 1600px), (min-resolution: 2dppx) and (min-width: 1200px) and (max-width: 1600px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-bg-desktop@2x.jpg");
+  }
 }
 
 .strengths-header {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.143;
@@ -521,12 +578,7 @@ img {
 
 .strengths-list {
   display: flex;
-  justify-content: space-between;
-}
-
-.strengths-list__item {
-  max-width: 270px;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 .strengths-list__text {
@@ -545,6 +597,24 @@ img {
   height: 120px;
   background: var(--grey-bgc);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .strengths-list__item {
+    flex-basis: calc((100% - 30px * 2) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .strengths-list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .strengths-list__item {
+    max-width: 270px;
+    align-items: center;
+  }
 }
 
 .work-list {
