--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,4 +1,28 @@
 .container {
+  // width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+  align-items: center;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+/*.container {
   width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
@@ -37,4 +61,4 @@
     display: flex;
     justify-content: center;
   }
-}
+}*/
