Nadano style sekcji headers

--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,15 @@ img {
   }
 }
 
+.secondary-header {
+  padding-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.667;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 .social-list {
   margin-bottom: 30px;
   display: flex;
@@ -614,6 +623,12 @@ img {
   .strengths-list__item {
     max-width: 270px;
     align-items: center;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
   }
 }
 
