--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
+}
+
 .work-list {
   display: flex;
   justify-content: space-between;
