--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,21 +3,45 @@
 }
 
 .team-list {
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  // display: flex;
+  // flex-direction: column;
 
   &__item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
     background-color: var(--white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-
-    &:not(:last-child) {
-      margin-right: 30px;
+  }
+  @media screen and (max-width: 767.9px) {
+    .team-list__item {
+      margin-bottom: 30px;
     }
   }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px * 2) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 30px * 4) / 4);
+  }
+  // &:not(:last-child) {
+  //   margin-right: 30px;
+  // }
+
+  &__wrapper {
+    padding: 30px 10px;
+  }
+
   &__name,
   &__job {
     font-size: 16px;
@@ -25,13 +49,51 @@
     letter-spacing: 0.03em;
     text-align: center;
   }
+
   &__name {
-    margin-top: 30px;
     margin-bottom: 10px;
     font-weight: 500;
   }
+
   &__job {
     color: var(--grey-color);
-    margin-bottom: 30px;
+    margin-bottom: 16px;
   }
 }
+// .team {
+//   background-color: var(--grey-bgc);
+// }
+
+// .team-list {
+//   display: flex;
+
+//   &__item {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     background-color: var(--white-color);
+//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//       0px 2px 1px rgba(0, 0, 0, 0.2);
+//     border-radius: 0px 0px 4px 4px;
+
+//     &:not(:last-child) {
+//       margin-right: 30px;
+//     }
+//   }
+//   &__name,
+//   &__job {
+//     font-size: 16px;
+//     line-height: 1.188;
+//     letter-spacing: 0.03em;
+//     text-align: center;
+//   }
+//   &__name {
+//     margin-top: 30px;
+//     margin-bottom: 10px;
+//     font-weight: 500;
+//   }
+//   &__job {
+//     color: var(--grey-color);
+//     margin-bottom: 30px;
+//   }
+// }
