--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -35,6 +35,10 @@ img {
 }
 
 .link {
-  list-style: none;
+  // list-style: none;
   text-decoration: none;
+}
+
+.address {
+  font-style: normal;
 }
