--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,11 +1,27 @@
 .logo {
+  display: flex;
+  justify-content: center;
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
+  font-size: 24px;
+  line-height: 1.667;
   letter-spacing: 0.03em;
   text-decoration: none;
   margin-right: 93px;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 83px;
+  }
+
+  @media screen and (max-width: 1199.9px) {
+    margin: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.192;
+  }
 }
 .logo-blue-theme {
   color: var(--blue-color);
