--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,16 +1,30 @@
 .customer-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: -15px;
+  &__item {
+    // flex-basis: calc((100% - 30px * 2) / 2);
+    flex-basis: calc(100% / 2 - 30px);
+    margin: 15px;
 
-  &__item:not(:last-child) {
-    margin-right: 30px;
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 30px * 3) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 30px * 6) / 6);
+      // flex-basis: calc(100% / 4 - 30px);
+    }
   }
+  // &__item:not(:last-child) {
+  //   margin-right: 30px;
+  // }
 
   &__link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
+    width: 100%;
     height: 92px;
     border: 1px solid var(--icon-color);
     border-radius: 4px;
