--- a/sass/components/_headers.scss
+++ b/sass/components/_headers.scss
@@ -34,15 +34,10 @@
   letter-spacing: 0.03em;
 }
 
-// .third-header {
-//   font-weight: 700;
-//   font-size: 14px;
-//   line-height: 1.143;
-//   letter-spacing: 0.03em;
-//   text-transform: uppercase;
-// }
-
-// .footer-header {
-//   margin-bottom: 20px;
-//   color: var(--white-color);
-// }
+.third-header {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
