--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,11 @@ img {
 }
 
 .link {
-  list-style: none;
   text-decoration: none;
+}
+
+.address {
+  font-style: normal;
 }
 
 .container {
@@ -139,13 +142,35 @@ img {
 }
 
 .logo {
+  display: flex;
+  justify-content: center;
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
+  font-size: 24px;
+  line-height: 1.667;
   letter-spacing: 0.03em;
   text-decoration: none;
   margin-right: 93px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 83px;
+  }
+}
+
+@media screen and (max-width: 1199.9px) {
+  .logo {
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.192;
+  }
 }
 
 .logo-blue-theme {
@@ -186,6 +211,14 @@ img {
   line-height: 1.667;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+.third-header {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .social-list {
@@ -424,27 +457,42 @@ img {
   cursor: pointer;
 }
 
-.newsletter__btn {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
+.btn {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 10px 41px;
+  width: 200px;
+  height: 50px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
-  width: 200px;
-  background: var(--blue-color);
-  color: var(--white-color);
-  padding: 10px 27px 10px 42px;
-  border-style: none;
-  border-radius: 4px;
+  text-align: center;
+  letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  background-color: var(--blue-color);
+  color: var(--white-color);
   cursor: pointer;
 }
 
 .newsletter__icon {
   fill: var(--white-bgc);
   margin-left: 24px;
+  margin-top: 3px;
+}
+
+.newsletter__btn {
+  position: relative;
+  padding-right: 76px;
+  outline: none;
+}
+
+@media screen and (max-width: 1199.9px) {
+  .newsletter__btn {
+    margin-top: 20px;
+  }
 }
 
 .header {
@@ -761,29 +809,53 @@ img {
 }
 
 .footer {
-  padding: 60px 0;
   background-color: var(--dark-bgc);
+}
+
+.footer__container {
+  padding: 60px 15px;
+  cursor: pointer;
+}
+
+.footer__third-header {
+  margin-bottom: 20px;
+  text-align: center;
+  color: var(--white-color);
+}
+
+.footer__social {
+  align-items: center;
+}
+
+.address {
+  margin-top: 20px;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
 }
 
-.footer__web {
-  margin-right: 70px;
-}
-
-.address {
-  margin-top: 20px;
-  font-style: normal;
-}
-
 .address-list {
-  display: flex;
-  flex-direction: column;
+  display: block;
+  margin-top: 20px;
 }
 
-.address-list__list__item {
-  margin: 9px 0;
+.address-list__item:nth-child(2) {
+  margin: 8px 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .address-list__item:nth-child(2) {
+    margin: 9px 0;
+  }
+}
+
+.address-list__link {
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-list__link:hover, .address-list__link:focus {
+  color: var(--blue-color);
 }
 
 .address-list__map {
@@ -791,46 +863,61 @@ img {
   transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-list__link {
-  color: rgba(255, 255, 255, 0.6);
-  transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address-list__map:hover, .address-list__map:focus, .address-list__link:hover, .address-list__link:focus {
-  color: var(--blue-color);
-}
-
-.newsletter {
-  margin-left: 78px;
-}
-
-.newsletter__form {
-  display: flex;
-  align-items: center;
+.address-list__logo {
+  text-align: center;
 }
 
 .newsletter__email {
-  width: 358px;
-  margin-right: 12px;
-  padding: 15px 0;
-  padding-left: 16px;
-  background-color: transparent;
+  width: 100%;
+  height: 50px;
+  padding: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  background-color: var(--dark-bgc);
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .newsletter__email::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
 
 .newsletter__email:focus {
   border-color: var(--blue-color);
+}
+
+.newsletter__icon {
+  position: absolute;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+  }
+  .footer__left-side {
+    margin-right: 144px;
+  }
+  .newsletter__email {
+    max-width: 450px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__web, .footer__social {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+  .footer__newsletter {
+    text-align: center;
+  }
 }
 
 .filters-list {
