--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,69 +1,225 @@
 .footer {
-  padding: 60px 0;
   background-color: var(--dark-bgc);
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
 
-  &__web {
-    margin-right: 70px;
+  &__container {
+    padding: 60px 15px;
+    cursor: pointer;
+  }
+
+  &__third-header {
+    margin-bottom: 20px;
+    text-align: center;
+    color: var(--white-color);
+  }
+
+  &__social {
+    align-items: center;
   }
 }
 
 .address {
   margin-top: 20px;
-  font-style: normal;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+}
 
-  &-list {
-    display: flex;
-    flex-direction: column;
-    &__list__item {
+.address-list {
+  display: block;
+  margin-top: 20px;
+
+  &__item:nth-child(2) {
+    margin: 8px 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    &__item:nth-child(2) {
       margin: 9px 0;
     }
-    &__map {
-      color: var(--white-color);
-      transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    &__link {
-      color: rgba(255, 255, 255, 0.6);
-      transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    &__map:hover,
-    &__map:focus,
-    &__link:hover,
-    &__link:focus {
+  }
+
+  &__link {
+    color: rgba(255, 255, 255, 0.6);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
       color: var(--blue-color);
     }
+
+    // &--white {
+    //   color: var(--white-color);
+    //   transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    // }
+  }
+  &__map {
+    color: var(--white-color);
+    transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__logo {
+    text-align: center;
   }
 }
 
-.newsletter {
-  margin-left: 78px;
-  &__form {
-    display: flex;
-    align-items: center;
-  }
-  &__email {
-    width: 358px;
-    margin-right: 12px;
-    padding: 15px 0;
-    padding-left: 16px;
-    background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    outline: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.newsletter__email {
+  width: 100%;
+  height: 50px;
+  padding: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--dark-bgc);
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &::placeholder {
-      font-size: 16px;
-      line-height: 1.25;
-      letter-spacing: 0.03em;
-      color: rgba(255, 255, 255, 0.6);
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  &:focus {
+    border-color: var(--blue-color);
+  }
+}
+
+.newsletter__icon {
+  position: absolute;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    &__wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: baseline;
     }
 
-    &:focus {
-      border-color: var(--blue-color);
+    &__left-side {
+      margin-right: 144px;
+    }
+  }
+
+  .newsletter__email {
+    max-width: 450px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer {
+    &__web,
+    &__social {
+      text-align: center;
+      margin-bottom: 60px;
+    }
+
+    &__newsletter {
+      text-align: center;
     }
   }
 }
+
+// @media screen and (min-width: 1200px) {
+//   .footer {
+//     &__container {
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       align-items: baseline;
+//     }
+
+//     &__left-side {
+//       margin-right: 70px;
+//     }
+
+//     &__center {
+//       margin-right: 78px;
+//     }
+
+//     &__third-header {
+//       text-align: left;
+//     }
+//   }
+
+//   .footer-form__newsletter {
+//     display: flex;
+//   }
+
+//   .newsletter__email {
+//     width: 358px;
+//     margin-right: 12px;
+//   }
+// }
+
+// .footer {
+//   padding: 60px 0;
+//   background-color: var(--dark-bgc);
+//   font-size: 14px;
+//   line-height: 1.714;
+//   letter-spacing: 0.03em;
+
+//   &__web {
+//     margin-right: 70px;
+//   }
+// }
+
+// .address {
+//   margin-top: 20px;
+//   font-style: normal;
+
+//   &-list {
+//     display: flex;
+//     flex-direction: column;
+//     &__list__item {
+//       margin: 9px 0;
+//     }
+//     &__map {
+//       color: var(--white-color);
+//       transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+//     }
+//     &__link {
+//       color: rgba(255, 255, 255, 0.6);
+//       transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+//     }
+//     &__map:hover,
+//     &__map:focus,
+//     &__link:hover,
+//     &__link:focus {
+//       color: var(--blue-color);
+//     }
+//   }
+// }
+
+// .newsletter {
+//   margin-left: 78px;
+//   &__form {
+//     display: flex;
+//     align-items: center;
+//   }
+//   &__email {
+//     width: 358px;
+//     margin-right: 12px;
+//     padding: 15px 0;
+//     padding-left: 16px;
+//     background-color: transparent;
+//     border: 1px solid rgba(255, 255, 255, 0.3);
+//     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//     border-radius: 4px;
+//     outline: none;
+//     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &::placeholder {
+//       font-size: 16px;
+//       line-height: 1.25;
+//       letter-spacing: 0.03em;
+//       color: rgba(255, 255, 255, 0.6);
+//     }
+
+//     &:focus {
+//       border-color: var(--blue-color);
+//     }
+//   }
+// }
