--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,11 @@ img {
   align-items: center;
 }
 
+.porfolio-filters .container {
+  display: flex;
+  justify-content: center;
+}
+
 @media screen and (min-width: 480px) {
   .container {
     max-width: 480px;
@@ -84,6 +89,12 @@ img {
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+  }
+  header .container {
+    display: flex;
+    padding-top: 24px;
+    padding-bottom: 25px;
+    align-items: center;
   }
 }
 
@@ -150,27 +161,6 @@ img {
   line-height: 1.667;
   letter-spacing: 0.03em;
   text-decoration: none;
-  margin-right: 93px;
-}
-
-@media screen and (min-width: 768px) {
-  .logo {
-    margin-right: 83px;
-  }
-}
-
-@media screen and (max-width: 1199.9px) {
-  .logo {
-    margin: auto;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .logo {
-    margin-right: 93px;
-    font-size: 26px;
-    line-height: 1.192;
-  }
 }
 
 .logo-blue-theme {
@@ -183,6 +173,20 @@ img {
 
 .logo-dark-theme {
   color: var(--white-color);
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 83px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.192;
+  }
 }
 
 .main-header {
@@ -503,6 +507,19 @@ img {
   display: flex;
 }
 
+.active {
+  color: var(--blue-color);
+}
+
+.navigation-list__link,
+.place-list__link {
+  font-weight: 500;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.02em;
+}
+
 .navigation-list {
   display: flex;
   align-items: center;
@@ -510,10 +527,6 @@ img {
 
 .navigation-list__item {
   position: relative;
-}
-
-.navigation-list__item:not(:last-child) {
-  margin-right: 46px;
 }
 
 .navigation-list__link {
@@ -540,19 +553,12 @@ img {
   background-color: var(--blue-color);
 }
 
-.active {
-  color: var(--blue-color);
-}
-
 .place-list {
   display: flex;
   margin-left: auto;
 }
 
 .place-list__link {
-  display: flex;
-  align-items: center;
-  margin-left: 50px;
   color: var(--grey-color);
   transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -567,13 +573,50 @@ img {
   fill: currentColor;
 }
 
-.navigation-list__link,
-.place-list__link {
-  font-weight: 500;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.02em;
+@media screen and (max-width: 767.9px) {
+  .header-container {
+    position: relative;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+  }
+  .navigation-list__link,
+  .place-list__link {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  .header-container {
+    display: flex;
+    padding-top: 26px;
+    padding-bottom: 21px;
+    padding-left: 16px;
+    align-items: center;
+  }
+  .navigation-list__item:not(:last-child) {
+    margin-right: 60px;
+  }
+  .place-list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation-list__item:not(:last-child) {
+    margin-right: 46px;
+  }
+  .place-list__link-phone {
+    margin-left: 50px;
+  }
+  .place-list__icon {
+    margin-right: 10px;
+  }
+  .place-list__link {
+    font-size: 14px;
+    line-height: 1.143;
+  }
 }
 
 .hero {
