--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,15 +6,28 @@
   display: flex;
 }
 
+.active {
+  color: var(--blue-color);
+}
+
+.navigation-list__link,
+.place-list__link {
+  font-weight: 500;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.02em;
+}
+
 .navigation-list {
   display: flex;
   align-items: center;
 
   &__item {
     position: relative;
-    &:not(:last-child) {
-      margin-right: 46px;
-    }
+    // &:not(:last-child) {
+    //   margin-right: 46px;
+    // }
   }
   &__link {
     color: var(--main-color);
@@ -40,18 +53,11 @@
   }
 }
 
-.active {
-  color: var(--blue-color);
-}
-
 .place-list {
   display: flex;
   margin-left: auto;
 
   &__link {
-    display: flex;
-    align-items: center;
-    margin-left: 50px;
     color: var(--grey-color);
     transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -67,11 +73,56 @@
   }
 }
 
-.navigation-list__link,
-.place-list__link {
-  font-weight: 500;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.02em;
+@media screen and (max-width: 767.9px) {
+  .header-container {
+    position: relative;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+  }
+
+  .navigation-list__link,
+  .place-list__link {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  .header-container {
+    display: flex;
+    padding-top: 26px;
+    padding-bottom: 21px;
+    padding-left: 16px;
+    align-items: center;
+  }
+
+  .navigation-list__item:not(:last-child) {
+    margin-right: 60px;
+  }
+
+  .place-list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation-list__item:not(:last-child) {
+    margin-right: 46px;
+  }
+
+  .place-list {
+    &__link-phone {
+      margin-left: 50px;
+    }
+
+    &__icon {
+      margin-right: 10px;
+    }
+
+    &__link {
+      font-size: 14px;
+      line-height: 1.143;
+    }
+  }
 }
