Stylowanie mobile-menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "./components/social";
 @import "./components/modal";
 @import "./components/buttons";
+@import "./components/mobile-menu";
 
 @import "./layout/header";
 @import "./layout/hero";
