--- a/css/main.css
+++ b/css/main.css
@@ -1117,11 +1117,35 @@ img {
 
 .filters-list {
   display: flex;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 767.9px) {
+  .filters-list {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters-list {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filters-list {
+    margin-bottom: 50px;
+  }
 }
 
 .filters-list__item:not(:last-child) {
   margin-right: 8px;
+}
+
+@media screen and (max-width: 767.9px) {
+  .filters-list__item {
+    margin-bottom: 15px;
+  }
 }
 
 .filters-list__button {
@@ -1134,16 +1158,15 @@ img {
   letter-spacing: 0.03em;
   color: var(--main-colorFont);
   background: var(--grey-bgc);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1), color 0.5s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filters-list__button:hover,
-.filters-list__button:focus {
+.filters-list__button:hover, .filters-list__button:focus {
+  background-color: var(--blue-color);
   color: var(--white-color);
-  background: var(--blue-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -1164,10 +1187,6 @@ img {
 
 .project-list__item:hover, .project-list__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.project-list__item:nth-child(n + 7) {
-  margin-bottom: 0;
 }
 
 .project-list__overlay {
@@ -1218,5 +1237,11 @@ img {
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--second-colorFont);
+}
+
+@media screen and (min-width: 768px) {
+  .project-list__item:nth-child(n + 8) {
+    margin-bottom: 0;
+  }
 }
 /*# sourceMappingURL=main.css.map */
