--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -1,35 +1,52 @@
 .filters-list {
   display: flex;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
 
-  &__item:not(:last-child) {
-    margin-right: 8px;
+  @media screen and (max-width: 767.9px) {
+    margin-bottom: 40px;
   }
 
-  &__button {
-    padding: 6px 22px;
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--main-colorFont);
-    background: var(--grey-bgc);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
   }
 }
 
-.filters-list__button:hover,
-.filters-list__button:focus {
-  color: var(--white-color);
-  background: var(--blue-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+.filters-list__item {
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
+  @media screen and (max-width: 767.9px) {
+    margin-bottom: 15px;
+  }
+}
+
+.filters-list__button {
+  padding: 6px 22px;
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-colorFont);
+  background: var(--grey-bgc);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    color 0.5s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--blue-color);
+    color: var(--white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .project-list {
@@ -51,9 +68,9 @@
         1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 
-    &:nth-child(n + 7) {
-      margin-bottom: 0;
-    }
+    // &:nth-child(n + 7) {
+    //   margin-bottom: 0;
+    // }
   }
   &__overlay {
     position: absolute;
@@ -103,5 +120,11 @@
     line-height: 1.875;
     letter-spacing: 0.03em;
     color: var(--second-colorFont);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project-list__item:nth-child(n + 8) {
+    margin-bottom: 0;
   }
 }
